<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_interval"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5sp"
            android:text="@string/play_interval" />

        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5sp"
            android:text="@string/countdown" />
    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="playInterval"
            android:text="@string/play_interval" />

        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/countdown"
            android:textSize="100sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:paddingTop="15sp"
            android:text="@string/directions"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/up_or_down_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <RadioButton
                android:id="@+id/radioUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up" />

            <RadioButton
                android:id="@+id/radioDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:text="@string/intervals"
            android:textSize="20sp" />

        <GridView
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="20dp"
            android:numColumns="auto_fit"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:text="Corrects"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/num_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:text="0"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:text="Incorrects"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/num_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:text="0"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>